<resources>
    <string name="app_name">MyCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="emptystring" />
    <string name="title_activity_display_message">My Message</string>

    <string name="NumQs">How Many Questions?</string>
    <string name="title_activity_main4_activityquiz">Main4Activityquiz</string>

    <string name="DecimalBinary">Decimal __ Binary</string>
    <string name="TestQ">What do you want to work on? Check all that apply</string>
    <string name="DecimalOctal">Decimal __ Octal</string>
    <string name="DecimalHexa">Decimal __ Hexadecimal</string>
    <string name="BinaryOctal">Binary __ Octal</string>
    <string name="BinaryHexa">Binary __ Hexadecimal</string>
    <string name="OctalHexa">Octal __ Hexadecimal</string>

    <string name="TestButton">Test My Skills</string>
    <string name="AskLength">Length of Test (choose one)</string>
    <string name="SixQs">6 Questions</string>
    <string name="TwelveQs">12 Questions</string>
    <string name="TwentyfourQs">24 Questions</string>
    <string name="Endless">Endless</string>

    <string name="changeDecimal">Change Number</string>
    <string name="submit">Submit my answer</string>
    <string name="genButtontext">Generate Number</string>
    <string name="generate"> 5 </string>
    <string name="convertstring">Decimal:</string>
    <string name="AnswerString">Your Answer:</string>
    <string name="percent">0/0</string>
    <string name="denominator">0</string>
    <string name="numerator">0</string>
    <string name="numcorrect"># correct:</string>
    <string name="numattempt"># attempts:</string>
    <string name="abort">ABORT</string>

    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="title_activity_fix_it">FixItActivity</string>

    <string name="FixIt">You have input an invalid number.</string>
    <string name="FixIt2">Binary numbers only have "1" and "0"</string>
    <string name="FixtIt3">Octal numbers use digits "0 to 7"</string>
    <string name="FixIt4">Hexadecimal numbers use "0 to 9" and "A to F"</string>
    <string name="ButtonFix">I got it</string>

    <string name="yourscore">Your Score</string>
    <string name="title_activity_score_report">ScoreReport</string>
    <string name="newtest">Start a New Test</string>
    <string name="goCalc">Use calculator</string>

    <string name="questionKey1">Convert Decimal to Binary</string>
    <string name="questionKey2">Convert Binary to Decimal</string>
    <string name="questionKey3">Convert Decimal to Octal</string>
    <string name="questionKey4">Convert Octal to Decimal</string>
    <string name="questionKey5">Convert Binary to Octal</string>
    <string name="questionKey6">Convert Octal to Binary</string>
    <string name="questionKey7">Convert Decimal to Hexadecimal</string>
    <string name="questionKey8">Convert Hexadecimal to Decimal</string>
    <string name="questionKey9">Convert Binary to Hexadecimal</string>
    <string name="questionKey10">Convert Hexadecimal to Binary</string>
    <string name="questionKey11">Convert Octal to Hexadecimal</string>
    <string name="questionKey12">Convert Hexadecimal to Octal</string>

    <string name="difficulty_low">low</string>
    <string name="difficulty_text">Difficulty</string>
    <string name="difficulty_medium">medium</string>
    <string name="difficulty_high">high</string>
    <string name="base">Base</string>


</resources>
