<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86E2D5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizSelection">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/TestQ"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DecimalBinary"
        android:id="@+id/Decimal_Binary"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:freezesText="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DecimalOctal"
        android:id="@+id/Decimal_Octal"
        android:layout_below="@+id/Decimal_Binary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:freezesText="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DecimalHexa"
        android:id="@+id/Decimal_Hexadecimal"
        android:layout_below="@+id/Binary_Octal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:freezesText="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BinaryOctal"
        android:id="@+id/Binary_Octal"
        android:layout_below="@+id/Decimal_Octal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:freezesText="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BinaryHexa"
        android:id="@+id/Binary_Hexadecimal"
        android:layout_below="@+id/Decimal_Hexadecimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:freezesText="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OctalHexa"
        android:id="@+id/Octal_Hexadecimal"
        android:layout_below="@+id/Binary_Hexadecimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:onClick="selectItem"
        android:freezesText="true" />

    <Button
        android:id="@+id/btnStartQuizActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TestButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/Decimal_Hexadecimal"
        android:layout_toEndOf="@+id/Decimal_Hexadecimal"
        android:textColor="#FFFFFF"
        android:onClick="ButtonStartQuiz" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AskLength"
        android:textColor="#FFFFFF"
        android:id="@+id/textView2"
        android:layout_below="@+id/Octal_Hexadecimal"
        android:layout_centerHorizontal="true" />

    <RadioGroup android:layout_width="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="30dp"
        android:id="@+id/radioGroup2">

    <RadioButton
        android:id="@+id/SixQs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SixQs"
        android:textColor="#FFFFFF"
        android:onClick="Qnum" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TwelveQs"
        android:id="@+id/TwelveQs"
        android:textColor="#FFFFFF"
        android:onClick="Qnum" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TwentyfourQs"
        android:id="@+id/twenty4Qs"
        android:textColor="#FFFFFF"
        android:onClick="Qnum" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Endless"
        android:id="@+id/Endless"
        android:onClick="Qnum"
        android:textColor="#FFFFFF"
        android:checked="true"/>

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorDisplay"
        android:layout_alignTop="@+id/Decimal_Binary"
        android:layout_alignParentRight="true"
        android:textColor="#3498db"
        android:background="@android:color/transparent"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/errorDisplay"
        android:layout_alignEnd="@+id/errorDisplay"
        android:layout_marginBottom="27dp"
        android:id="@+id/radioGroup">

    </RadioGroup>

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/difficulty_text"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/radioGroup3"
        android:layout_alignRight="@+id/errorDisplay"
        android:layout_alignEnd="@+id/errorDisplay" />

    <RadioGroup
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:id="@+id/radioGroup3"

        android:layout_above="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton android:id="@+id/radio_difficulty_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_low"
            android:onClick="chooseDifficulty"
            android:checked="true"
            android:textColor="@color/common_signin_btn_dark_text_pressed" />

        <RadioButton android:id="@+id/radio_difficulty_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_medium"
            android:onClick="chooseDifficulty"
            android:textColor="@color/common_signin_btn_dark_text_pressed" />
        <RadioButton android:id="@+id/radio_difficulty_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_high"
            android:onClick="chooseDifficulty"
            android:checked="false"
            android:textColor="@color/common_signin_btn_dark_text_pressed" />
    </RadioGroup>
</RelativeLayout>
