<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.henry.mycalculator.Main4Activityquiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Convert Decimal to Binary"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitAnswer"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="TestResult"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeDecimal"
        android:id="@+id/ChangeNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="changeDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/decimal"
        android:textSize="50sp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/convertstring"
        android:id="@+id/convertstring"
        android:layout_alignBottom="@+id/decimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AnswerString"
        android:id="@+id/AnswerString"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/submitAnswer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:editable="true"
        android:layout_height="wrap_content"
        android:hint="Enter binary #"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/AnswerField"
        android:layout_alignTop="@+id/AnswerString"
        android:layout_toRightOf="@+id/RightOrWrong"
        android:layout_toEndOf="@+id/RightOrWrong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/RightOrWrong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/submitAnswer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:layout_above="@+id/ChangeNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/percent"
        android:id="@+id/PercentCorrect"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numerator"
        android:id="@+id/NumCorrect"
        android:layout_above="@+id/NumAttempt"
        android:layout_alignLeft="@+id/numbercorrect"
        android:layout_alignStart="@+id/numbercorrect"
        android:layout_marginLeft="65dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/denominator"
        android:id="@+id/NumAttempt"
        android:layout_above="@+id/PercentCorrect"
        android:layout_alignLeft="@+id/numberattempts"
        android:layout_marginLeft="75dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numcorrect"
        android:id="@+id/numbercorrect"
        android:layout_above="@+id/numberattempts"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numattempt"
        android:id="@+id/numberattempts"
        android:layout_above="@+id/PercentCorrect"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TestAct"
        android:id="@+id/tester"
        android:layout_alignTop="@+id/test"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
