<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B77BE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Quiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Convert Decimal to Binary"
        android:id="@+id/textView3"
        android:textColor="#00ff00"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitAnswer"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="TestResult"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeDecimal"
        android:id="@+id/ChangeNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="changeNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/convertThis"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView3"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/convertstring"
        android:textColor="#FFFFFF"
        android:id="@+id/convertstring"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AnswerString"
        android:textColor="#FFFFFF"
        android:id="@+id/AnswerString"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/submitAnswer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:freezesText="true" />

    <EditText
        android:layout_width="wrap_content"
        android:editable="true"
        android:layout_height="wrap_content"
        android:hint="Enter #"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/AnswerField"
        android:layout_alignTop="@+id/AnswerString"
        android:layout_toRightOf="@+id/RightOrWrong"
        android:layout_toEndOf="@+id/RightOrWrong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textColor="#FFFFFF"
        android:id="@+id/RightOrWrong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/submitAnswer"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/ChangeNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/percent"
        android:textColor="#FFFFFF"
        android:id="@+id/PercentCorrect"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/numerator"
        android:textColor="#FFFFFF"
        android:id="@+id/NumCorrect"
        android:layout_above="@+id/NumAttempt"
        android:layout_alignLeft="@+id/numbercorrect"
        android:layout_alignStart="@+id/numbercorrect"
        android:layout_marginLeft="75dp"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/denominator"
        android:id="@+id/NumAttempt"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/PercentCorrect"
        android:layout_alignLeft="@+id/numberattempts"
        android:layout_marginLeft="75dp"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numcorrect"
        android:textColor="#FFFFFF"
        android:id="@+id/numbercorrect"
        android:layout_above="@+id/numberattempts"
        android:layout_alignParentLeft="true"
        android:freezesText="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numattempt"
        android:textColor="#FFFFFF"
        android:id="@+id/numberattempts"
        android:layout_above="@+id/PercentCorrect"
        android:layout_alignParentLeft="true"
        android:freezesText="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abort"
        android:id="@+id/abort"
        android:layout_above="@+id/ChangeNumber"
        android:layout_alignParentRight="true"
        android:onClick="Abort"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CHEAT"
        android:id="@+id/startSwiperButton"
        android:layout_above="@+id/abort"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/abort"
        android:layout_alignStart="@+id/abort" />


</RelativeLayout>
